--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.11",
     "@mui/styles": "^5.15.11",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2"
   },
