--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@mui/material": "^5.15.11",
     "@mui/styles": "^5.15.11",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
+    "events": "^3.3.0",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.8.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
